[mengyuan] feat: fix sidebar  overflow

--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ html, body {
     border-radius: 80%;
   }
  
- .dropdown-content {
+.dropdown-content {
     display: none;
     background-color: #f9f9f9;
     min-width: 160px;
@@ -143,7 +143,6 @@ html, body {
     align-self: center;
     overflow: auto;
     position: relative;
-    /* align-items: center; */
     background-color: var(--dark-white);
 }
 
@@ -151,10 +150,10 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-self: center;
-    height: auto;
+    overflow: hidden;
+    height: 800px;
     width: 20%;
     color: var(--light-white);
-    overflow: hidden;
     background-color: var(--dark-black);
 }
 
@@ -492,7 +491,7 @@ aside .sidebar-actions {
     display: flex;
     margin-bottom: 15px;
     max-height: 80px;
-    overflow: auto;
+    /* overflow: auto; */
     color: var(--dark-black);
     background-color:var(--light-white) ;
 }
